--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <link rel="stylesheet" href="style.css">
         <meta charset="utf-8">
+        <title>理科学部</title>
     </head>
     <body>
         <h1>横須賀学院中学理科学部</h1>
