--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <h1>横須賀学院中学理科学部</h1>
         <p><br>理科学部員とかのコメ欄みたいになればいいかなと思っています。</p>
-        <a　crass="maegaki"><li>一応ネットリテラシーに乗っ取ったコメントをしましょう。</li></p>
+        <br><li>一応ネットリテラシーに乗っ取ったコメントをしましょう。</li></p>
     </body>
 </html>
 <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">Widget</a> is loading comments...</div>
