--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1>横須賀学院中学理科学部</h1>
-        <a><br>理科学部員とかのコメ欄みたいになればいいかなと思っています。</a>
+        <p><br>理科学部員とかのコメ欄みたいになればいいかなと思っています。</p>
         <br><br><li>一応ネットリテラシーに乗っ取ったコメントをしましょう。</li></p>
     </body>
 </html>
