--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <h1>横須賀学院中学理科学部</h1>
         <p id="kannsou"><br>理科学部員とかのコメ欄みたいになればいいかなと思っています。</p>
         <br><br><li>一応ネットリテラシーに乗っ取ったコメントをしましょう。</li></p>
+    　　<a id="maintext" href= "https://akimoto-shuuiti.github.io/osirase/" >お知らせ。(2021/6/17)</a>
     </body>
 </html>
 <a>
