--- a/index.html
+++ b/index.html
@@ -3,17 +3,14 @@
     <head>
         <link rel="stylesheet" href="style.css">
         <meta charset="utf-8">
-        <title>理科学部</title>
+        <link rel="icon" type="image/png" href="favicon.png">
     </head>
     <body>
         <h1>横須賀学院中学理科学部</h1>
-        <p id="kannsou"><br>理科学部員とかのコメ欄みたいになればいいかなと思っています。</p>
-        <br><br><li>一応ネットリテラシーに乗っ取ったコメントをしましょう。</li></p>
-    　　<a id="maintext" href= "https://akimoto-shuuiti.github.io/osirase/" >お知らせ。(2021/6/17)</a>
+        <p><br>理科学部員とかのコメ欄みたいになればいいかなと思っています。</p>
+        <a　crass="maegaki"><li>一応ネットリテラシーに乗っ取ったコメントをしましょう。</li></p>
     </body>
 </html>
-<a>
 <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">Widget</a> is loading comments...</div>
 <link rel="stylesheet" type="text/css" href="https://www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
 <script type="text/javascript" id="hcb"> if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="https://www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&mod=%241%24wq1rdBcg%24EUpZqzijj8iBwgatND9I3%2F"+"&opts=16862&num=10&ts=1615614102555");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})();  </script>
-</a>
