--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <link rel="stylesheet" href="style.css">
         <meta charset="utf-8">
-        <link rel="icon" type="image/png" href="favicon.png">
+        <link rel="icon" href="favicon.png">
     </head>
     <body>
         <h1>横須賀学院中学理科学部</h1>
