--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <h1>横須賀学院中学理科学部</h1>
         <p><br>理科学部員とかのコメ欄みたいになればいいかなと思っています。<br></p>
-        <p><a　crass="maegaki"><br><br><li>一応ネットリテラシーに乗っ取ったコメントをしましょう。</li></p>
+        <p><br><br><a　crass="maegaki"><br><br><li>一応ネットリテラシーに乗っ取ったコメントをしましょう。</li></p>
     </body>
 </html>
 <details>
