--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <body>
         <h1>横須賀学院中学理科学部</h1>
         <p><br>理科学部員とかのコメ欄みたいになればいいかなと思っています。<br></p>
-        <p><br><br><a　crass="maegaki"><li>一応ネットリテラシーに乗っ取ったコメントをしましょう。</li></p>
+        <p><br><a　crass="maegaki"><li>一応ネットリテラシーに乗っ取ったコメントをしましょう。</li></p>
     </body>
 </html>
+<body>
+    <a>下の「コメント欄」をクリックするとコメント欄が表示されます。</a>
 <details>
     <summary>コメント欄</summary>
     <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">Widget</a> is loading comments...</div>
