--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     </head>
     <body>
         <h1>横須賀学院中学理科学部</h1>
-        <p><br>理科学部員とかのコメ欄みたいになればいいかなと思っています。<br></p>
+        <p><br>理科学部員とかのコメ欄みたいになればいいかなと思っています。<br>
+            <details>
+                <summary>お知らせ</summary>
+                何かコメント見てたら背景を望む声が見受けられたので案を募集します。<br>
+                クラスルームでスレッドみたいなの立てておくので案はそこに送ってね。
+            </details><br></p>
+
         <p><br><li>一応ネットリテラシーに則ったコメントをしましょう。</li></p>
     </body>
 </html>
