--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" href="style.css">
         <meta charset="utf-8">
         <link rel="icon" type="image/png" href="favicon.png">
+        <title>理化学部ログ</title>
     </head>
     <body>
         <h1>横須賀学院中学理科学部</h1>
