--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <details>
                 <summary>お知らせ</summary>
                 何かコメント見てたら背景を望む声が見受けられたので案を募集します。<br>
-                クラスルームでスレッドみたいなの立てておくので案はそこに送ってね。
+                ラインでスレッドみたいなの立てとくから案はそこに送ってね。
             </details><br></p>
 
         <p><br><li>一応ネットリテラシーに則ったコメントをしましょう。</li></p>
