--- a/index.html
+++ b/index.html
@@ -7,22 +7,49 @@
         <title>理化学部ログ</title>
     </head>
     <body>
+            <nav>
+                <ul>
+                    <li id="menu1"><a href="任意のリンク">HOME</a></li>
+                    <li id="menu2"><a href="任意のリンク">お知らせ</a></li>
+                    <li id="menu3"><a href="任意のリンク">部活概要</a></li>
+                    <li id="menu4"><a href="任意のリンク">管理人ブログ</a></li>
+                    <li id="menu5"><a href="任意のリンク">お問い合わせ</a></li>
+                </ul>
+            </nav>
         <h1>横須賀学院中学理科学部</h1>
         <p><br>理科学部員とかのコメ欄みたいになればいいかなと思っています。<br>
             <details>
-                <summary>お知らせ</summary>
+                <summary>ちょっとしたお知らせ</summary>
                 何かコメント見てたら背景を望む声が見受けられたので案を募集します。<br>
-                ラインでスレッドみたいなの立てとくから案はそこに送ってね。
+                クラスルームでスレッドみたいなの立てておくので案はそこに送ってね。
             </details><br></p>
 
         <p><br><li>一応ネットリテラシーに則ったコメントをしましょう。</li></p>
     </body>
 </html>
 <body>
-    <a>下の「コメント欄」をクリックするとコメント欄が表示されます。</a>
+    <a id="setumei1">下の「コメント欄」をクリックするとコメント欄が表示されます。</a>
 <details>
     <summary>コメント欄</summary>
     <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">Widget</a> is loading comments...</div>
 <link rel="stylesheet" type="text/css" href="https://www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
 <script type="text/javascript" id="hcb"> if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="https://www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&mod=%241%24wq1rdBcg%24EUpZqzijj8iBwgatND9I3%2F"+"&opts=16862&num=10&ts=1615614102555");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})();  </script>
 </details>
+<!--
+    貴様,,,見ているなッ！
+    はい、管理人のタキトウです。
+    令和三年度理科学部の部長でした。
+    今は元部長って事になるんだけど、
+    正直ねぇ,,,
+    卒業生が、そして元部長がこうやって部に関係するのってどうなの？
+    ってちょっと思うわけ。
+    でも正直やり残したこともたくさんあったりして,,,
+    なんかもう雑用でいいから関係させてくれませんかねぇ,,,
+    まぁ、俺の時代(前時代の覇者感)は終わった訳だし、おとなしく見守る事にしますよ。
+    でもプログラミングに関してはほんの少しだけ教えられるからたまに顔出してセミナーみたいなの開けたらいいなぁ
+    なんて思う。
+    まぁそこらへんは五十嵐先生や山口先生に相談だな。
+    だめならそこできっぱり諦める腹だし。
+    って事で高校からは少し勉強に本腰を入れようかなと思っているタキトウでした。
+    おしまい、ハイfin fin fin！
+-->
