--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <p><br>理科学部員とかのコメ欄みたいになればいいかなと思っています。<br>
             <details>
                 <summary>ちょっとしたお知らせ</summary>
-                何かコメント見てたら背景を望む声が見受けられたので案を募集します。<br>
-                クラスルームでスレッドみたいなの立てておくので案はそこに送ってね。
+                私の知っている範囲でですが、HTMLやCSSの教科書的なものを作成しています。<br>
+                あるいは途中で頓挫するかもしれませんが一応作っています。
             </details><br></p>
 
         <p><br><li>一応ネットリテラシーに則ったコメントをしましょう。</li></p>
