--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                     <li id="menu1"><a href="https://akimoto-shuuiti.github.io/rikagakuburogu/">HOME</a></li>
                     <li id="menu2"><a href="任意のリンク">お知らせ</a></li>
                     <li id="menu3"><a href="任意のリンク">部活概要</a></li>
-                    <li id="menu4"><a href="任意のリンク">管理人ブログ</a></li>
+                    <li id="menu4"><a href="https://akimoto-shuuiti.github.io/director-s-vlog/">管理人ブログ</a></li>
                     <li id="menu5"><a href="任意のリンク">お問い合わせ</a></li>
                 </ul>
             </nav>
