--- a/index.html
+++ b/index.html
@@ -16,15 +16,18 @@
                     <li id="menu5"><a href="https://forms.gle/uK8XuV4cG2qTipRe6">お問い合わせ</a></li>
                 </ul>
             </nav>
-        <h1>横須賀学院中学理科学部</h1>
-        <p><br>理科学部員とかのコメ欄みたいになればいいかなと思っています。<br>
-            <details>
-                <summary>ちょっとしたお知らせ</summary>
-                私の知っている範囲でですが、HTMLやCSSの教科書的なものを作成しています。<br>
-                あるいは途中で頓挫するかもしれませんが一応作っています。
-            </details><br></p>
-
-        <p><br><li>一応ネットリテラシーに則ったコメントをしましょう。</li></p>
+        <section class="club">
+        <h1　class="title">YokosukaGakuinScienceClub</h1>
+        <p>
+          実験やプログラミングなど<br>
+          部員の方々からの意見を積極的に<br>
+          取り入れる部活にしています<br>
+          学校の中でやる部活動は<br>
+          大切な物で身近にある物だと思います<br>
+          プログラミング、実験やりたい人集え！！！
+            </p>
+            </section>
+            
     </body>
 </html>
 <body>
